[package]
name = "mvola"
version = "0.1.2"
edition = "2021"
description = "Rust library for the MVola API"
documentation = "https://docs.rs/mvola"
readme = "README.md"
repository = "https://github.com/tsirysndr/mvola-rs"
license = "MIT"

[lib]
doctest = false

[[example]]
name = "generate_token"
path = "examples/generate_token.rs"

[[example]]
name = "send_payment"
path = "examples/send_payment.rs"

[[example]]
name = "transaction_details"
path = "examples/transaction_details.rs"

[[example]]
name = "transaction_status"
path = "examples/transaction_status.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
mockito = "0.7.0"
surf = "2.3.2"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "1.0.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
